--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
     <script src="react.development.js"></script>
     <script src="react-dom.development.js"></script>
+    <script src="babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
 
-    <script src="index.js"></script>
+    <script src="index.jsx" type="text/babel"></script>
+    <!-- Production: <script src="index.js"></script> -->
 </body>
 </html>
