--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="root"></div>
 
+    <script src="/env.js"></script>
     <script src="index.jsx" type="text/babel"></script>
     <!-- Production: <script src="index.js"></script> -->
 </body>
