--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
 
     <script src="/env.js"></script>
-    <script src="index.jsx" type="text/babel"></script>
-    <!-- Production: <script src="index.js"></script> -->
+    <!-- <script src="index.jsx" type="text/babel"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
