Front-End Modules and Webpack: Modularize frontend js; Install webpack; bundle js

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,6 +13,6 @@
 
     <script src="/env.js"></script>
     <!-- <script src="index.jsx" type="text/babel"></script> -->
-    <script src="index.js"></script>
+    <script src="app_bundle.js"></script>
 </body>
 </html>
