--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,6 +13,6 @@
 
     <script src="/env.js"></script>
     <!-- <script src="index.jsx" type="text/babel"></script> -->
-    <script src="app_bundle.js"></script>
+    <script src="app.bundle.js"></script>
 </body>
 </html>
