Libraries Bundle: Install React modules; Compile separate vendor and app bundles with Webpack

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="react.development.js"></script>
-    <script src="react-dom.development.js"></script>
-    <script src="babel.min.js"></script>
+    <title>MERN Issue Tracker</title>
 </head>
 <body>
     <div id="root"></div>
 
     <script src="/env.js"></script>
-    <!-- <script src="index.jsx" type="text/babel"></script> -->
-    <script src="app.bundle.js"></script>
+    <script src="/app.bundle.js"></script>
+    <script src="/vendor.bundle.js"></script>
 </body>
 </html>
