--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MERN Issue Tracker</title>
+    <style>
+        a.active { background-color: aqua; }
+    </style>
 </head>
 <body>
     <div id="root"></div>
