Date Input: Input field has a display format and edit format that toggles upon focus

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,6 +6,8 @@
     <title>MERN Issue Tracker</title>
     <style>
         a.active { background-color: aqua; }
+        input.invalid { border-color: red; }
+        div.error { color: red; }
     </style>
 </head>
 <body>
