--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="minimum-scale=1, width=device-width, initial-scale=1">
     <title>MERN Issue Tracker</title>
     <style>
         a.active { background-color: aqua; }
